tests/baselines/reference/inheritanceMemberFuncOverridingProperty.errors.txt
inheritanceMemberFuncOverridingProperty.ts(6,5): error TS2425: Class 'a' defines instance member property 'x', but extended class 'b' defines it as instance member function.


==== inheritanceMemberFuncOverridingProperty.ts (1 errors) ====
    class a {
        x: () => string;
    }
    
    class b extends a {
        x() {
        ~
!!! error TS2425: Class 'a' defines instance member property 'x', but extended class 'b' defines it as instance member function.
            return "20";
        }
    }